# stable-diffusion

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
cli/: Cargo.toml  README.md
cli/src/: generate.rs  train.rs
examples/generation/: Cargo.toml  README.md
examples/generation/src/: main.rs
examples/training/lora/bacana/: parameters.json
examples/training/lora/bacana/generation/: generate.py
stable-diffusion/: Cargo.toml  README.md
stable-diffusion-cli/: Cargo.toml
stable-diffusion-cli/src/: generate.rs  main.rs  train.rs
stable-diffusion-trainer/: Cargo.toml  README.md
stable-diffusion-trainer/examples/: train-lora.rs
stable-diffusion-trainer/src/: lib.rs  prelude.rs
stable-diffusion-trainer/src/captioning/: mod.rs
stable-diffusion-trainer/src/data_set/: mod.rs
stable-diffusion-trainer/src/data_set/image_data_set/: mod.rs
stable-diffusion-trainer/src/environment/: mod.rs
stable-diffusion-trainer/src/json/: mod.rs  test.json
stable-diffusion-trainer/src/model_file_format/: mod.rs
stable-diffusion-trainer/src/network/: mod.rs
stable-diffusion-trainer/src/precision/: mod.rs
stable-diffusion-trainer/src/prompt/: mod.rs
stable-diffusion-trainer/src/trainer/: mod.rs
stable-diffusion-trainer/src/trainer/output/: mod.rs
stable-diffusion-trainer/src/trainer/parameters/: mod.rs
stable-diffusion-trainer/src/trainer/training/: mod.rs
stable-diffusion-trainer/src/trainer/training/bucketing/: mod.rs
stable-diffusion-trainer/src/trainer/training/model/: mod.rs
stable-diffusion-trainer/src/trainer/training/model/checkpoint/: mod.rs
stable-diffusion-trainer/src/trainer/training/network/: mod.rs
stable-diffusion-trainer/src/trainer/training/optimizer/: mod.rs
stable-diffusion-trainer/src/trainer/training/output/: mod.rs
stable-diffusion-trainer/src/trainer/training/prompt/: mod.rs
stable-diffusion-trainer/src/trainer/training/scheduler/: mod.rs
stable-diffusion-trainer/src/trainer/workflow/: mod.rs
stable-diffusion-trainer/src/utils/: mod.rs
stable-diffusion-trainer/src/utils/traits/: mod.rs
stable-diffusion-trainer/src/utils/traits/reference_resolver/: mod.rs
stable-diffusion-trainer/src/utils/traits/update/: mod.rs
stable-diffusion-trainer/src/utils/variable/: mod.rs
stable-diffusion/src/: clip.rs  device.rs  dtype.rs  file.rs  lib.rs  main.rs  tokenizer.rs  unet.rs  vae.rs
trainer/cli/: Cargo.toml  README.md
trainer/cli/src/: main.rs
trainer/lib/: Cargo.toml  README.md
trainer/lib/src/: lib.rs
trainer/lib/src/environment/: mod.rs
trainer/lib/src/model_file_format/: mod.rs
trainer/lib/src/preparer/: mod.rs
trainer/lib/src/preparer/image_data_set/: mod.rs
trainer/lib/src/trainer/: mod.rs
trainer/lib/src/trainer/optimizer/: mod.rs
trainer/lib/src/trainer/parameters/: mod.rs
trainer/lib/src/trainer/training/: mod.rs
