[workspace.package]
version = "0.1.5"
description = "Stable Diffusion kohya_ss wrapper"
license = "Apache-2.0"
documentation = "https://docs.rs/stable-diffusion-trainer"
repository = "https://github.com/sensorial-systems/stable-diffusion"
homepage = "https://github.com/sensorial-systems/stable-diffusion"
edition = "2021"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
keywords = ["stable-diffusion", "generative-ai", "trainer"]

[workspace.dependencies]
stable-diffusion-trainer = { path = "trainer/lib"}

# TODO: Clean this dependencies once we get stable diffusion working
accelerate-src = { version = "0.3.2" }
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
candle = { package = "candle-core", version = "0.4.1" }
candle-datasets = { version = "0.4.1" }
candle-flash-attn = { version = "0.4.1" }
candle-kernels = { version = "0.4.1" }
candle-metal-kernels = { version = "0.4.1" }
candle-nn = { version = "0.4.1" }
candle-onnx = { version = "0.4.1" }
candle-transformers = { version = "0.4.1" }
clap = { version = "4.2.4", features = ["derive"] }
criterion = { version = "0.5.1", default-features=false }
cudarc = { version = "0.10.0", features = ["f16"] }
fancy-regex = "0.13.0"
gemm = { version = "0.17.0", features = ["wasm-simd128-enable"] }
hf-hub = "0.3.0"
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2.147" }
log = "0.4"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
num_cpus = "1.15.0"
num-traits = "0.2.15"
parquet = { version = "50.0.0" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
rusttype = { version = "0.9", default-features = false }
safetensors = "0.4.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.15.0", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
wav = "1.0.0"
yoke = { version = "0.7.2", features = ["derive"] }
zip = { version = "0.6.6", default-features = false }
metal = { version = "0.27.0", features = ["mps"]}


[workspace]
resolver = "2"
members = [
    "trainer/lib",
    "trainer/cli"
, "stable-diffusion"]
