[workspace.package]
version = "0.1.7"
description = "Stable Diffusion"
license = "Apache-2.0"
documentation = "https://docs.rs/stable-diffusion-trainer"
repository = "https://github.com/sensorial-systems/stable-diffusion"
homepage = "https://github.com/sensorial-systems/stable-diffusion"
edition = "2021"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
keywords = ["stable-diffusion", "generative-ai", "trainer"]

[workspace.dependencies]
stable-diffusion = "0.1.7"
stable-diffusion-trainer = "0.1.7"

anyhow = { version = "1", features = ["backtrace"] }
candle = { package = "candle-core", version = "0.4.1" }
candle-flash-attn = { version = "0.4.1" }
candle-kernels = { version = "0.4.1" }
candle-metal-kernels = { version = "0.4.1" }
candle-nn = { version = "0.4.1" }
candle-onnx = { version = "0.4.1" }
candle-transformers = { version = "0.4.1" }
clap = { version = "4.2.4", features = ["derive"] }
cudarc = { version = "0.10.0", features = ["f16"] }
hf-hub = "0.3.0"
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
rand = "0.8.5"
safetensors = "0.4.1"
tokenizers = { version = "0.15.0", default-features = false }

[patch.crates-io]
# stable-diffusion = { path = "stable-diffusion"}
# stable-diffusion-trainer = { path = "stable-diffusion-trainer"}


[workspace]
resolver = "2"
members = [
    "stable-diffusion",
    "stable-diffusion-trainer",
    "stable-diffusion-cli"
]
