[package]
name = "stable-diffusion-cli"
readme = "README.md"
version.workspace = true
description = "Stable Diffusion CLI"
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true

[[bin]]
name = "stable-diffusion"
path = "src/main.rs"

[dependencies]
rfd = "0.14"
stable-diffusion.workspace = true
stable-diffusion-trainer.workspace = true
anyhow.workspace = true
image.workspace = true
clap.workspace = true
candle.workspace = true

[features]
cuda = ["stable-diffusion/cuda"]
metal = ["stable-diffusion/metal"]
mkl = ["stable-diffusion/mkl"]