[package]
name = "stable-diffusion-trainer"
readme = "README.md"
description = "Stable Diffusion Trainer"
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
path-slash = "0.2"
walkdir = "2.3.2"
regex = "1.5"
anyhow.workspace = true