[package]
name = "generation"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stable-diffusion = { path = "../../stable-diffusion" }