[package]
name = "stable-diffusion-cli"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
stable-diffusion-trainer = { path = "../lib" }
clap = { version = "4", features = ["derive"] }
rfd = "0.13"
