[package]
name = "stable-diffusion-cli"
readme = "README.md"
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true

[[bin]]
name = "stable-diffusion"
path = "src/main.rs"

[dependencies]
stable-diffusion-trainer.workspace = true
clap = { version = "4", features = ["derive"] }
rfd = "0.13"
