[package]
name = "stable-diffusion-trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
path-slash = "0.2"