[package]
name = "stable-diffusion-trainer"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
path-slash = "0.2"
